--- a/config/dev.env
+++ b/config/dev.env
@@ -1,20 +1,20 @@
 PORT=3000
 TITLE=SPORTIZEN
-SITE_NAME=sportizen.com
+SITE_NAME=sportizen.in
 SITE_URL=http://localhost:4200
 MONGODB_URL=mongodb://127.0.0.1:27017/sportizen
 JWT_SECRET=b417cf7714f5c803ac31ea7ea4ee3a11
 MAIL_URI=http://localhost:4200
 API_URI=http://localhost:3000
 LOGIN_URL=http://localhost:4200/#login
-EMAIL=shubhammore.developer@gmail.com
-ENQUIRY_EMAIL=shubhammore.developer@gmail.com
-REPLY_EMAIL=shubhammore.developer@gmail.com
-GMAIL_USER=shubhammore.developer@gmail.com
-GMAIL_PASSWORD=Shubham@17
-GMAIL_REFRESH_TOKEN=1//04cyBaVqG5uoXCgYIARAAGAQSNwF-L9IrzzcuWO63nehRB6kiqENy-jEqrN9DPAsybZ7wi3U0JSM7N_zhvMWG6avIhDuCeZIPjFA
-GMAIL_CLIENT_ID=923180336524-uujqk35drt2u82f9qn9jeclgeie2ddda.apps.googleusercontent.com
-GMAIL_CLIENT_SECRET=7ftwvm_bD8nAPvCxMCNDhVTc
+EMAIL=sportizen65@gmail.com
+ENQUIRY_EMAIL=sportizen65@gmail.com
+REPLY_EMAIL=sportizen65@gmail.com
+GMAIL_USER=sportizen65@gmail.com
+GMAIL_PASSWORD=CSSsports
+GMAIL_REFRESH_TOKEN=1//044W8d4Wk0c-PCgYIARAAGAQSNwF-L9IrahETtRgyWCyvxbB-gqTI9cnBCuKJQUcMuOcSk8GJ4YZB05pcequ1ejWHgk1Ut7FheQM
+GMAIL_CLIENT_ID=106169972032-hpra7cct1ilhh17vqqppif8oppaqu802.apps.googleusercontent.com
+GMAIL_CLIENT_SECRET=Sen491IF_T9nPSVe_9N1ic7R
 AWS_BUCKET_NAME=shubhammore.developer
 AWS_REGION=ap-south-1
 AWS_SECRET_ACCESS_ID=AKIAVLSVFQHLSIA7OMEV
