--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "prettier": "2.0.4"
   },
   "scripts": {
     "start": "node sportizen.js",
