--- a/config/prod.env
+++ b/config/prod.env
@@ -1,12 +1,12 @@
-PORT=3000
+PORT=3002
 TITLE=SPORTIZEN
-SITE_NAME=sportizen.in
-SITE_URL=http://localhost:4200
-MONGODB_URL=mongodb://127.0.0.1:27017/sportizen
+SITE_NAME=www.sportizen.in
+SITE_URL=https://www.sportizen.in
+MONGODB_URL=mongodb+srv://sportizen:Sportizen@65@cluster0-3j02a.mongodb.net/sportizen?retryWrites=true&w=majority
 JWT_SECRET=b417cf7714f5c803ac31ea7ea4ee3a11
-MAIL_URI=http://localhost:4200
+MAIL_URI=https://www.sportizen.in
 API_URI=http://localhost:3000
-LOGIN_URL=http://localhost:4200/#login
+LOGIN_URL=https://www.sportizen.in/#login
 EMAIL=sportizen65@gmail.com
 ENQUIRY_EMAIL=sportizen65@gmail.com
 REPLY_EMAIL=sportizen65@gmail.com
