--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "aws-sdk": "^2.601.0",
+    "aws-sdk": "^2.656.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "capitalize": "^2.0.1",
@@ -15,19 +15,25 @@
     "cors": "^2.8.5",
     "env-cmd": "^9.0.3",
     "express": "^4.16.4",
+    "express-mongo-sanitize": "^2.0.0",
+    "express-rate-limit": "^5.1.1",
     "googleapis": "^46.0.0",
+    "helmet": "^3.22.0",
+    "hpp": "^0.2.3",
     "image-size": "^0.8.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.4.1",
-    "mongoose": "^5.8.7",
+    "mongoose": "^5.9.7",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nexmo": "^2.6.0",
     "nodemailer": "^6.4.2",
     "number-to-words": "^1.2.4",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.3",
     "prettier": "2.0.4"
   },
   "scripts": {
