--- a/config/dev.env
+++ b/config/dev.env
@@ -15,6 +15,8 @@ GMAIL_PASSWORD=CSSsports
 GMAIL_REFRESH_TOKEN=1//044W8d4Wk0c-PCgYIARAAGAQSNwF-L9IrahETtRgyWCyvxbB-gqTI9cnBCuKJQUcMuOcSk8GJ4YZB05pcequ1ejWHgk1Ut7FheQM
 GMAIL_CLIENT_ID=106169972032-hpra7cct1ilhh17vqqppif8oppaqu802.apps.googleusercontent.com
 GMAIL_CLIENT_SECRET=Sen491IF_T9nPSVe_9N1ic7R
+OAUTH_CLIENT_ID=106169972032-oiguubqvjaak1oj1cb1lfc758b4vp5tl.apps.googleusercontent.com
+OAUTH_CLIENT_SECRET=
 AWS_BUCKET_NAME=shubhammore.developer
 AWS_REGION=ap-south-1
 AWS_SECRET_ACCESS_ID=AKIAVLSVFQHLSIA7OMEV
