--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.4",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.1",
+    "google-auth-library": "^6.0.0",
     "googleapis": "^46.0.0",
     "helmet": "^3.22.0",
     "hpp": "^0.2.3",
