--- a/config/dev.env
+++ b/config/dev.env
@@ -5,7 +5,7 @@ SITE_URL=http://localhost:4200
 MONGODB_URL=mongodb://127.0.0.1:27017/sportizen
 JWT_SECRET=b417cf7714f5c803ac31ea7ea4ee3a11
 MAIL_URI=http://localhost:4200
-API_URI=http://localhost:3000
+API_URI=http://localhost:3000/
 LOGIN_URL=http://localhost:4200/#login
 EMAIL=sportizen65@gmail.com
 ENQUIRY_EMAIL=sportizen65@gmail.com
