--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nexmo": "^2.6.0",
     "nodemailer": "^6.4.2",
     "number-to-words": "^1.2.4",
+    "socket.io": "^2.3.0",
     "validator": "^10.11.0",
     "xss-clean": "^0.1.1"
   },
