--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "ajv": "^6.12.6",
     "aws-sdk": "^2.656.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
