--- a/config/prod.env
+++ b/config/prod.env
@@ -5,7 +5,7 @@ SITE_URL=https://www.sportizen.in
 MONGODB_URL=mongodb+srv://sportizen:Sportizen@65@cluster0-3j02a.mongodb.net/sportizen?retryWrites=true&w=majority
 JWT_SECRET=b417cf7714f5c803ac31ea7ea4ee3a11
 MAIL_URI=https://www.sportizen.in
-API_URI=http://localhost:3000/
+API_URI=http://api.sportizen.in/
 LOGIN_URL=https://www.sportizen.in/#login
 EMAIL=sportizen65@gmail.com
 ENQUIRY_EMAIL=sportizen65@gmail.com
