--- a/config/dev.env
+++ b/config/dev.env
@@ -15,6 +15,8 @@ GMAIL_PASSWORD=CSSsports
 GMAIL_REFRESH_TOKEN=1//04VNsoNw-VY1NCgYIARAAGAQSNwF-L9IrVCKLD3vu2_UG-ILJuODnlBTyRuLz-p8Xt0EyC7DA15nT6TtsBNUU6zynh4f9lPsSZ1o
 GMAIL_CLIENT_ID=106169972032-4936c2offq9ncu7h2fd82bifkcvd173o.apps.googleusercontent.com
 GMAIL_CLIENT_SECRET=0YqV8SUQne8TcIoY5A6yKS_2
+OAUTH_CLIENT_ID=106169972032-chpkainbs75ebp3tl423egobncjv5vjm.apps.googleusercontent.com
+OAUTH_CLIENT_SECRET=oXFvEVGyqR4WBa5aT4vWpXOu
 AWS_BUCKET_NAME=shubhammore.developer
 AWS_REGION=ap-south-1
 AWS_SECRET_ACCESS_ID=AKIAVLSVFQHL246XS2UP
