--- a/config/dev.env
+++ b/config/dev.env
@@ -2,7 +2,8 @@ PORT=3000
 TITLE=SPORTIZEN
 SITE_NAME=sportizen.in
 SITE_URL=http://localhost:4200
-MONGODB_URL=mongodb://127.0.0.1:27017/sportizen
+MONGODB_URL=mongodb+srv://sportizen:Sportizen@65@cluster0-3j02a.mongodb.net/sportizen?retryWrites=true&w=majority
+# MONGODB_URL=mongodb://127.0.0.1:27017/sportizen
 JWT_SECRET=b417cf7714f5c803ac31ea7ea4ee3a11
 MAIL_URI=http://localhost:4200
 API_URI=http://localhost:3000/
