--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "number-to-words": "^1.2.4",
     "socket.io": "^2.4.1",
     "validator": "^10.11.0",
+    "winston": "^3.3.3",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
