--- a/config/dev.env
+++ b/config/dev.env
@@ -4,6 +4,8 @@ SITE_NAME=sportizen.in
 SITE_URL=http://localhost:4200
 MONGODB_URL=mongodb+srv://sportizen:Sportizen@65@cluster0-3j02a.mongodb.net/sportizen?retryWrites=true&w=majority
 # MONGODB_URL=mongodb://127.0.0.1:27017/sportizen
+RAZORPAY_KEY_ID=rzp_test_sd927qB1Q0xG2n
+RAZORPAY_KEY_SECRET=W0lSVMNcRv6Dp33kAJ9BIGWx
 JWT_SECRET=b417cf7714f5c803ac31ea7ea4ee3a11
 MAIL_URI=http://localhost:4200
 API_URI=http://localhost:3000/
