--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "capitalize": "^2.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "env-cmd": "^9.0.3",
     "express": "^4.16.4",
     "express-mongo-sanitize": "^2.0.2",
@@ -31,6 +32,7 @@
     "nexmo": "^2.9.1",
     "nodemailer": "^6.5.0",
     "number-to-words": "^1.2.4",
+    "razorpay": "^2.0.6",
     "socket.io": "^2.4.1",
     "validator": "^10.11.0",
     "winston": "^3.3.3",
